--- a/application/admin/view/column.html
+++ b/application/admin/view/column.html
@@ -18,14 +18,23 @@
     <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
+<style>
+    table{
+        table-layout: fixed;
+    }
 
+    td{
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+    }
+</style>
 <body>
 <div class="x-nav">
             <span class="layui-breadcrumb">
                 <a href="">首页</a>
-                <a href="">演示</a>
-                <a>
-                    <cite>导航元素</cite></a>
+                <a href="">基础配置</a>
+                <a><cite>栏目设置</cite></a>
             </span>
     <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" onclick="location.reload()" title="刷新">
         <i class="layui-icon layui-icon-refresh" style="line-height:30px"></i>
@@ -36,15 +45,16 @@
         <div class="layui-col-md12">
             <div class="layui-card">
                 <div class="layui-card-body ">
-                    <form class="layui-form layui-col-space5">
+                    <form class="layui-form layui-col-space5" method="post" action="">
                         <div class="layui-input-inline layui-show-xs-block">
-                            <input class="layui-input" placeholder="分类名" name="cate_name"></div>
+                            <input class="layui-input" placeholder="栏目名" name="title"></div>
                         <div class="layui-input-inline layui-show-xs-block">
-                            <button class="layui-btn"  lay-submit="" lay-filter="sreach"><i class="layui-icon"></i>增加</button>
+                            <button class="layui-btn"  lay-submit="" lay-filter="column_add"><i class="layui-icon"></i>增加</button>
                         </div>
                     </form>
                     <hr>
-                    <blockquote class="layui-elem-quote">每个tr 上有两个属性 cate-id='1' 当前分类id fid='0' 父级id ,顶级分类为 0，有子分类的前面加收缩图标<i class="layui-icon x-show" status='true'>&#xe623;</i></blockquote>
+                    <blockquote class="layui-elem-quote">请谨慎操作！！！
+                    </blockquote>
                 </div>
                 <div class="layui-card-header">
                     <button class="layui-btn layui-btn-danger" onclick="delAll()">
@@ -59,6 +69,9 @@
                             </th>
                             <th width="70">ID</th>
                             <th>栏目名</th>
+                            <th>栏目类型</th>
+                            <th width="100">栏目关键词</th>
+                            <th width="100">栏目描述</th>
                             <th width="50">排序</th>
                             <th width="80">状态</th>
                             <th width="250">操作</th>
@@ -68,42 +81,48 @@
                             {if condition='$vo.parentid == 0'}
                             <tr cate-id='{$vo.cid}' fid='0' >
                                 <td>
-                                    <input type="checkbox" name="" lay-skin="primary" class="check_box" lay-filter='check_box' data-cid="{$vo.cid-.}">
+                                    <input type="checkbox" name="" lay-skin="primary" class="check_box" lay-filter='check_box' data-cid="{$vo.cid}">
                                 </td>
                                 <td>{$vo.cid}</td>
                                 <td>
-
                                     <i class="layui-icon x-show" status='true'>&#xe623;</i>{$vo.title}
                                 </td>
-                                <td><input type="text" class="layui-input x-sort" name="order" value="{$vo.sort}"></td>
+                                <td>{:column_type($vo.type)}</td>
+                                <td title="{$vo.keywords}">{$vo.keywords}</td>
+                                <td title="{$vo.description}">{$vo.description}</td>
+                                <td><input type="text" class="layui-input x-sort sort" name="sort" value="{$vo.sort}" onblur="sort('{$vo.cid}',$(this))"></td>
                                 <td>
-                                    <input type="checkbox" name="switch"  lay-text="开启|停用"  checked="" lay-skin="switch">
+                                    <input type="checkbox" lay-filter="switch" class="switch" name="switch"  lay-text="开启|停用" value="{$vo.cid},{$vo.isdelete}" lay-skin="switch" {if condition="$vo.isdelete == 1"} checked {/if}>
                                 </td>
                                 <td class="td-manage">
-                                    <button class="layui-btn layui-btn layui-btn-xs"  onclick="xadmin.open('编辑','admin-edit.html')" ><i class="layui-icon">&#xe642;</i>编辑</button>
-                                    <button class="layui-btn layui-btn-warm layui-btn-xs"  onclick="xadmin.open('编辑','admin-edit.html')" ><i class="layui-icon">&#xe642;</i>添加子栏目</button>
-                                    <button class="layui-btn-danger layui-btn layui-btn-xs"  onclick="member_del(this,'要删除的id')" href="javascript:;" ><i class="layui-icon">&#xe640;</i>删除</button>
+                                    <button class="layui-btn layui-btn layui-btn-xs"  onclick="xadmin.open('栏目编辑','{:url("Index/column_alter")}?cid={$vo.cid}',600,400)" ><i class="layui-icon">&#xe642;</i>编辑</button>
+                                    <button class="layui-btn layui-btn-warm layui-btn-xs"  onclick="xadmin.open('子栏目添加','{:url("Index/column_add_child")}?cid={$vo.cid}',600,400)" ><i class="layui-icon">&#xe642;</i>添加子栏目</button>
+                                    <button class="layui-btn-danger layui-btn layui-btn-xs"  onclick="column_del(this,'{$vo.cid}')" href="javascript:;" ><i class="layui-icon">&#xe640;</i>删除</button>
                                 </td>
                             </tr>
                                 {volist name='data' id='vov'}
                                     {if condition='$vov.parentid == $vo.cid'}
                                     <tr cate-id='{$vov.cid}' fid='{$vov.parentid}' >
                                         <td>
-                                            <input type="checkbox" name="" lay-skin="primary" class="check_box" lay-filter='check_box'>
+                                            <input type="checkbox" name="" lay-skin="primary" class="check_box" lay-filter='check_box' data-cid="{$vov.cid}">
                                         </td>
-                                        <td>6</td>
+                                        <td>{$vov.cid}</td>
                                         <td>
                                             &nbsp;&nbsp;&nbsp;&nbsp;
                                             ├{$vov.title}
                                         </td>
-                                        <td><input type="text" class="layui-input x-sort" name="order" value="{$vov.sort}"></td>
+                                        <td></td>
+                                        <td title="{$vo.keywords}">{$vov.keywords}</td>
+                                        <td title="{$vo.description}">{$vov.description}</td>
+                                        <td><input type="text" class="layui-input x-sort" name="order" value="{$vov.sort}"  onblur="sort('{$vov.cid}',$(this))"></td>
                                         <td>
-                                            <input type="checkbox" name="switch"  lay-text="开启|停用"  checked="" lay-skin="switch">
+                                            <input type="checkbox" lay-filter="switch" name="switch" class="switch"  lay-text="开启|停用"   value="{$vov.cid},{$vov.isdelete}" lay-skin="switch" {if condition="$vov.isdelete == 1"} checked {/if}>
                                         </td>
                                         <td class="td-manage">
-                                            <button class="layui-btn layui-btn layui-btn-xs"  onclick="xadmin.open('编辑','admin-edit.html')" ><i class="layui-icon">&#xe642;</i>编辑</button>
-                                            <button class="layui-btn layui-btn-warm layui-btn-xs"  onclick="xadmin.open('编辑','admin-edit.html')" ><i class="layui-icon">&#xe642;</i>添加子栏目</button>
-                                            <button class="layui-btn-danger layui-btn layui-btn-xs"  onclick="member_del(this,'要删除的id')" href="javascript:;" ><i class="layui-icon">&#xe640;</i>删除</button>
+
+                                            <button class="layui-btn layui-btn layui-btn-xs"  onclick="xadmin.open('编辑','{:url("Index/column_alter")}?cid={$vov.cid}',600,400)" ><i class="layui-icon">&#xe642;</i>编辑</button>
+                                            <button class="layui-btn-danger layui-btn layui-btn-xs"  onclick="column_del(this,'{$vov.cid}')" href="javascript:;" ><i class="layui-icon">&#xe640;</i>删除</button>
+
                                         </td>
                                     </tr>
                                     {/if}
@@ -129,17 +148,42 @@
         form.on("checkbox(check_all)",function(data){
             $('.check_box').each(function(index,item){
                 item.checked = data.elem.checked;
+                // console.log(item.checked);
             });
             form.render('checkbox');
         });
+        //开关
+        form.on("switch(switch)",function(data){
+            var data = data.value.split(',');
+            var arr = [parseInt(data[0]),data[1]==1?0:1];
+            $(this).val(arr[0]+','+arr[1]);
+            $.post("{:url('Index/column_alter_status')}",{data:data},function(msg){
+                if (msg.status == 200){
+                    layer.msg(msg.message, {icon: 1});
+                }else {
+                    layer.msg(msg.message, {icon: 2});
+                }
+            })
+        });
+        form.render();
+
     });
 
-    /*用户-删除*/
-    function member_del(obj,id){
-        layer.confirm('确认要删除吗？',function(index){
-            //发异步删除数据
-            $(obj).parents("tr").remove();
-            layer.msg('已删除!',{icon:1,time:1000});
+
+    /*栏目-删除*/
+    function column_del(obj,id){
+        layer.confirm('确认要删除吗？',{icon:3},function(index){
+            $.post("{:url('Index/column_del')}",{cid:id},function(msg){
+                if (msg.status == 200){
+                    //发异步删除数据
+                    $(obj).parents("tr").remove();
+                    layer.msg(msg.message,{icon:1,time:1000});
+                }else {
+                    layer.msg(msg.message,{icon:2,time:1000});
+                }
+
+            });
+
         });
     }
 
@@ -177,9 +221,51 @@
     }
 
     //批量删除
-    function delAll()
+    function delAll() {
+        var cid = [];
+        $('.check_box').each(function (index, item) {
+            if (item.checked) {
+                cid.push($(this).attr('data-cid'));
+            }
+        });
+        layer.alert("确定删除吗？", {icon: 2}, function () {
+            layer.load();
+            $.ajax({
+                type:"post",
+                url:"{:url('Index/column_del_all')}",
+                data:{
+                    cid:cid,
+                },
+                success:function(msg){
+                    if (msg.status == 200) {
+                        layer.closeAll('loading');
+                        layer.msg(msg.message, {icon: 1});
+                        setTimeout(function () {
+                            location.reload()
+                        }, 1000)
+                    }else{
+                        layer.closeAll('loading');
+                        layer.msg(msg.message, {icon: 1});
+                    }
+                },
+                error:function(err){
+                    layer.closeAll('loading');
+                    layer.msg("服务器错误", {icon: 2});
+
+                }
+            });
+        });
+    }
+
+    //修改排序
+    function sort(cid,obj)
     {
-         console.log(1);
+        
+        $.post("{:url('Index/column_alter_sort')}",{cid:cid,sort:obj.val()},function (msg) {
+            if (msg.status == 200) {
+                layer.msg(msg.message, {icon: 1});
+            }
+        })
     }
 </script>
 </body>
