--- a/application/admin/view/index.html
+++ b/application/admin/view/index.html
@@ -1,172 +1,181 @@
 <!doctype html>
 <html class="x-admin-sm">
-    <head>
-        <meta charset="UTF-8">
-        <title>烛龙CMS后台管理系统</title>
-        <meta name="renderer" content="webkit|ie-comp|ie-stand">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-        <meta http-equiv="Cache-Control" content="no-siteapp" />
-        <link rel="stylesheet" href="__STATIC__/admin/css/font.css">
-        <link rel="stylesheet" href="__STATIC__/admin/css/xadmin.css">
-        <!-- <link rel="stylesheet" href="__STATIC__/admin/css/theme5.css"> -->
-        <script src="__STATIC__/admin/lib/layui/layui.js" charset="utf-8"></script>
-        <script type="text/javascript" src="__STATIC__/admin/js/xadmin.js"></script>
-        <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
-        <!--[if lt IE 9]>
-          <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
-          <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
-        <script>
-            // 是否开启刷新记忆tab功能
-            var is_remember = false;
-        </script>
-    </head>
-    <body class="index">
-        <!-- 顶部开始 -->
-        <div class="container">
-            <div class="logo">
-                <a href="__STATIC__/admin/index.html">烛龙CMS后台管理系统</a></div>
-            <div class="left_open">
-                <a><i title="展开左侧栏" class="iconfont">&#xe699;</i></a>
-            </div>
-            <ul class="layui-nav right" lay-filter="">
-                <li class="layui-nav-item">
-                    <a href="javascript:;">admin</a>
-                    <dl class="layui-nav-child">
-                        <!-- 二级菜单 -->
-                        <dd>
-                            <a onclick="xadmin.open('个人信息','http://www.baidu.com')">个人信息</a></dd>
-                        <dd>
-                            <a onclick="xadmin.open('切换帐号','http://www.baidu.com')">切换帐号</a></dd>
-                        <dd>
-                            <a href="__STATIC__/admin/login.html">退出</a></dd>
-                    </dl>
-                </li>
-                <li class="layui-nav-item to-index">
-                    <a href="/">前台首页</a></li>
-            </ul>
-        </div>
-        <!-- 顶部结束 -->
-        <!-- 中部开始 -->
-        <!-- 左侧菜单开始 -->
-        <div class="left-nav">
-            <div id="side-nav">
-                <ul id="nav">
-                    <li >
-                        <a href="javascript:;">
-                            <i class="iconfont left-nav-li" lay-tips="基础配置">&#xe6ae;</i>
-                            <cite>基础配置</cite>
-                            <i class="iconfont nav_right">&#xe697;</i></a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a onclick="xadmin.add_tab('站点配置','{:url("Index/site")}')">
-                                    <i class="iconfont">&#xe6a7;</i>
-                                    <cite>站点配置</cite>
-                                </a>
-                            </li>
-                            <li>
-                                <a onclick="xadmin.add_tab('公司设置','{:url("Index/company")}')">
-                                    <i class="iconfont">&#xe6a7;</i>
-                                    <cite>公司设置</cite>
-                                </a>
-                            </li>
-                            <li>
-                                <a onclick="xadmin.add_tab('栏目设置','{:url("Index/column")}')">
-                                    <i class="iconfont">&#xe6a7;</i>
-                                    <cite>栏目设置</cite>
-                                </a>
-                            </li>
-                        </ul>
+<head>
+    <meta charset="UTF-8">
+    <title>烛龙CMS后台管理系统</title>
+    <meta name="renderer" content="webkit|ie-comp|ie-stand">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
+    <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <link rel="stylesheet" href="__STATIC__/admin/css/font.css">
+    <link rel="stylesheet" href="__STATIC__/admin/css/xadmin.css">
+    <!-- <link rel="stylesheet" href="__STATIC__/admin/css/theme5.css"> -->
+    <script src="__STATIC__/admin/lib/layui/layui.js" charset="utf-8"></script>
+    <script type="text/javascript" src="__STATIC__/admin/js/xadmin.js"></script>
+    <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
+    <!--[if lt IE 9]>
+    <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
+    <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <script>
+        // 是否开启刷新记忆tab功能
+        var is_remember = false;
+    </script>
+</head>
+<body class="index">
+<!-- 顶部开始 -->
+<div class="container">
+    <div class="logo">
+        <a href="__STATIC__/admin/index.html">烛龙CMS后台管理系统</a></div>
+    <div class="left_open">
+        <a><i title="展开左侧栏" class="iconfont">&#xe699;</i></a>
+    </div>
+    <ul class="layui-nav right" lay-filter="">
+        <li class="layui-nav-item">
+            <a href="javascript:;">admin</a>
+            <dl class="layui-nav-child">
+                <!-- 二级菜单 -->
+                <dd>
+                    <a onclick="xadmin.open('个人信息','{:url("User/admin")}',600,450)">管理员信息</a>
+                </dd>
+
+                <dd>
+                    <a href="{:url('User/out_login')}">退出</a>
+                </dd>
+            </dl>
+        </li>
+        <li class="layui-nav-item to-index">
+            <a href="/" target="_blank">前台首页</a></li>
+    </ul>
+</div>
+<!-- 顶部结束 -->
+<!-- 中部开始 -->
+<!-- 左侧菜单开始 -->
+<div class="left-nav">
+    <div id="side-nav">
+        <ul id="nav">
+            <li >
+                <a href="javascript:;" >
+                    <i class="iconfont left-nav-li" lay-tips="基础配置">&#xe6ae;</i>
+                    <cite>基础配置</cite>
+                    <i class="iconfont nav_right">&#xe697;</i></a>
+                <ul class="sub-menu" style="display: block;">
+                    <li>
+                        <a class="active" onclick="xadmin.add_tab('站点配置','{:url("Index/site")}')">
+                        <i class="iconfont">&#xe6a7;</i>
+                        <cite>站点配置</cite>
+                        </a>
                     </li>
                     <li>
-                        <a href="javascript:;">
-                            <i class="iconfont left-nav-li" lay-tips="文章管理">&#xe69e;</i>
-                            <cite>文章管理</cite>
-                            <i class="iconfont nav_right">&#xe697;</i></a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a onclick="xadmin.add_tab('添加文章','welcome1.html')">
-                                    <i class="iconfont">&#xe6a7;</i>
-                                    <cite>添加文章</cite>
-                                </a>
-                                <a onclick="xadmin.add_tab('文章列表','welcome1.html')">
-                                    <i class="iconfont">&#xe6a7;</i>
-                                    <cite>文章列表</cite>
-                                </a>
-                            </li>
-                        </ul>
+                        <a onclick="xadmin.add_tab('公司设置','{:url("Index/company")}')">
+                        <i class="iconfont">&#xe6a7;</i>
+                        <cite>公司设置</cite>
+                        </a>
                     </li>
                     <li>
-                        <a href="javascript:;">
-                            <i class="iconfont left-nav-li" lay-tips="扩展配置">&#xe6b4;</i>
-                            <cite>扩展配置</cite>
-                            <i class="iconfont nav_right">&#xe697;</i></a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a onclick="xadmin.add_tab('轮播图','welcome1.html')">
-                                    <i class="iconfont">&#xe6a7;</i>
-                                    <cite>轮播图</cite>
-                                </a>
-                                <a onclick="xadmin.add_tab('友情链接','welcome1.html')">
-                                    <i class="iconfont">&#xe6a7;</i>
-                                    <cite>友情链接</cite>
-                                </a>
-                                <a onclick="xadmin.add_tab('留言列表','welcome1.html')">
-                                    <i class="iconfont">&#xe6a7;</i>
-                                    <cite>留言列表</cite>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="javascript:;">
-                            <i class="iconfont left-nav-li" lay-tips="系统信息">&#xe6ce;</i>
-                            <cite>系统信息</cite>
-                            <i class="iconfont nav_right">&#xe697;</i></a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a onclick="xadmin.add_tab('访问日志','welcome1.html')">
-                                    <i class="iconfont">&#xe6a7;</i>
-                                    <cite>访问日志</cite>
-                                </a>
-                                <a onclick="xadmin.add_tab('服务器信息','welcome1.html')">
-                                    <i class="iconfont">&#xe6a7;</i>
-                                    <cite>服务器信息</cite>
-                                </a>
-                            </li>
-                        </ul>
+                        <a onclick="xadmin.add_tab('栏目设置','{:url("Index/column")}')">
+                        <i class="iconfont">&#xe6a7;</i>
+                        <cite>栏目设置</cite>
+                        </a>
                     </li>
                 </ul>
+            </li>
+            <li>
+                <a href="javascript:;">
+                    <i class="iconfont left-nav-li" lay-tips="文章管理">&#xe69e;</i>
+                    <cite>文章管理</cite>
+                    <i class="iconfont nav_right">&#xe697;</i></a>
+                <ul class="sub-menu">
+                    <li>
+                        <a onclick="xadmin.add_tab('添加文章','{:url("Index/article_add")}')">
+                        <i class="iconfont">&#xe6a7;</i>
+                        <cite>添加文章</cite>
+                        </a>
+                    </li>
+                    <li>
+                        <a onclick="xadmin.add_tab('文章列表','{:url("Index/article_list")}')">
+                        <i class="iconfont">&#xe6a7;</i>
+                        <cite>文章列表</cite>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="javascript:;">
+                    <i class="iconfont left-nav-li" lay-tips="扩展配置">&#xe6b4;</i>
+                    <cite>扩展配置</cite>
+                    <i class="iconfont nav_right">&#xe697;</i></a>
+                <ul class="sub-menu">
+                    <li>
+                        <a onclick="xadmin.add_tab('轮播图','{:url("Index/banner_list")}')">
+                        <i class="iconfont">&#xe6a7;</i>
+                        <cite>轮播图</cite>
+                        </a>
+                    </li>
+                    <li>
+                        <a onclick="xadmin.add_tab('友情链接','{:url("Index/link_list")}')">
+                        <i class="iconfont">&#xe6a7;</i>
+                        <cite>友情链接</cite>
+                        </a>
+                    </li>
+                    <li>
+                        <a onclick="xadmin.add_tab('留言列表','{:url("Index/message")}')">
+                        <i class="iconfont">&#xe6a7;</i>
+                        <cite>留言列表</cite>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="javascript:;">
+                    <i class="iconfont left-nav-li" lay-tips="系统信息">&#xe6ce;</i>
+                    <cite>系统信息</cite>
+                    <i class="iconfont nav_right">&#xe697;</i></a>
+                <ul class="sub-menu">
+                    <li>
+                        <a onclick="xadmin.add_tab('访问日志','{:url("Index/access")}')">
+                        <i class="iconfont">&#xe6a7;</i>
+                        <cite>访问日志</cite>
+                        </a>
+                    </li>
+                    <li>
+                        <a onclick="xadmin.add_tab('服务器信息','{:url("Index/system")}')">
+                        <i class="iconfont">&#xe6a7;</i>
+                        <cite>服务器信息</cite>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+</div>
+<!-- <div class="x-slide_left"></div> -->
+<!-- 左侧菜单结束 -->
+<!-- 右侧主体开始 -->
+<div class="page-content">
+    <div class="layui-tab tab" lay-filter="xbs_tab" lay-allowclose="false">
+        <ul class="layui-tab-title">
+            <li class="home">
+                <i class="layui-icon">&#xe68e;</i>站点配置</li></ul>
+        <div class="layui-unselect layui-form-select layui-form-selected" id="tab_right">
+            <dl>
+                <dd data-type="this">关闭当前</dd>
+                <dd data-type="other">关闭其它</dd>
+                <dd data-type="all">关闭全部</dd></dl>
+        </div>
+        <div class="layui-tab-content">
+            <div class="layui-tab-item layui-show">
+                <iframe src="{:url('Index/site')}" frameborder="0" scrolling="yes" class="x-iframe"></iframe>
             </div>
         </div>
-        <!-- <div class="x-slide_left"></div> -->
-        <!-- 左侧菜单结束 -->
-        <!-- 右侧主体开始 -->
-        <div class="page-content">
-            <div class="layui-tab tab" lay-filter="xbs_tab" lay-allowclose="false">
-                <ul class="layui-tab-title">
-                    <li class="home">
-                        <i class="layui-icon">&#xe68e;</i>站点配置</li></ul>
-                <div class="layui-unselect layui-form-select layui-form-selected" id="tab_right">
-                    <dl>
-                        <dd data-type="this">关闭当前</dd>
-                        <dd data-type="other">关闭其它</dd>
-                        <dd data-type="all">关闭全部</dd></dl>
-                </div>
-                <div class="layui-tab-content">
-                    <div class="layui-tab-item layui-show">
-                        <iframe src="{:url('Index/site')}" frameborder="0" scrolling="yes" class="x-iframe"></iframe>
-                    </div>
-                </div>
-                <div id="tab_show"></div>
-            </div>
-        </div>
-        <div class="page-content-bg"></div>
-        <style id="theme_style"></style>
-        <!-- 右侧主体结束 -->
-        <!-- 中部结束 -->
+        <div id="tab_show"></div>
+    </div>
+</div>
+<div class="page-content-bg"></div>
+<style id="theme_style"></style>
+<!-- 右侧主体结束 -->
+<!-- 中部结束 -->
 
-    </body>
+</body>
 
 </html>
