--- a/application/admin/view/user/login.html
+++ b/application/admin/view/user/login.html
@@ -23,7 +23,7 @@
         <div id="darkbannerwrap"></div>
         
         <form method="post" class="layui-form" >
-            <input name="user" placeholder="用户名"  type="text" lay-verify="required" class="layui-input" >
+            <input name="user" placeholder="用户名"  type="text" lay-verify="required" class="layui-input"  autocomplete="off">
             <hr class="hr15">
             <input name="pass" lay-verify="required" placeholder="密码"  type="password" class="layui-input">
             <hr class="hr15">
@@ -38,8 +38,8 @@
         var form = layui.form;
         form.on('submit(login)',function(data){
             layer.load();
-        })
+        });
+    });
 
-    })
 </script>
 </html>
