CMS后台管理系统

--- a/application/install/view/instal_three.html
+++ b/application/install/view/instal_three.html
@@ -74,7 +74,7 @@
 
                 <!--后退,继续-->
                 <div class="index_mian_right_seven_ly">
-                    <a href="javascript:;"><input name="" class="index_mian_right_seven_Forward_ly" type="submit" value="继续" /></a>
+                    <a href="javascript:;"><input name="" class="index_mian_right_seven_Forward_ly" type="submit" value="安装" /></a>
                     <a href="javascript:history.back();"><input name=""  class="index_mian_right_seven_Forward_ly" type="button" value="后退" /></a>
                 </div>
             </form>
