CMS后台管理系统

--- a/application/install/view/instal__from.html
+++ b/application/install/view/instal__from.html
@@ -41,9 +41,9 @@
   <form action="" method="get">
   <div class="index_mian_right_one_ly">
    <div class="index_mian_right_one_one_ly"><span>安装完成</span></div>
-   <div class="font">恭喜，您已成功燭龙CMS后台管理系统。现在可以尽情使用了</div>
+   <div class="font">恭喜，您已成功燭龙CMS后台管理系统。现在可以尽情使用啦( •̀ ω •́ )✧</div>
    <div class="btn">
-   	<a href="#"><input name="" class="index_mian_right_seven_Forward_ly" type="button" value="进入系统" /></a>
+   	<a href="{:url('index/Index/index')}"><input name="" class="index_mian_right_seven_Forward_ly" type="button" value="进入系统" /></a>
    </div>
    
   </div>
