CMS后台管理系统

--- a/application/admin/view/index.html
+++ b/application/admin/view/index.html
@@ -144,6 +144,12 @@
                         <cite>服务器信息</cite>
                         </a>
                     </li>
+                    <li>
+                        <a onclick="xadmin.add_tab('更新日志','{:url("Index/log")}')">
+                        <i class="iconfont">&#xe6a7;</i>
+                        <cite>更新日志</cite>
+                        </a>
+                    </li>
                 </ul>
             </li>
         </ul>
